# SmartUpdateDemo

./: .gitignore  build.gradle  settings.gradle
apkpatch/: build.gradle
apkpatch/src/androidTest/java/com/feifan/apkpatch/: ExampleInstrumentedTest.java
apkpatch/src/main/cpp/: CMakeLists.txt  native-lib.cpp
apkpatch/src/main/java/com/feifan/apkpatch/: PatchUtils.java
apkpatch/src/main/res/values/: strings.xml  themes.xml
apkpatch/src/main/res/values-night/: themes.xml
apkpatch/src/test/java/com/feifan/apkpatch/: ExampleUnitTest.java
demo/: build.gradle
demo/src/androidTest/java/com/itheima/demo/: ExampleInstrumentedTest.java
demo/src/main/: AndroidManifest.xml
demo/src/main/java/com/itheima/demo/: MainActivity.java
demo/src/main/res/layout/: activity_main.xml
demo/src/main/res/xml/: file_paths.xml
demo/src/test/java/com/itheima/demo/: ExampleUnitTest.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
tools/bsdiff4.3/: toutiao.patch  命令.txt
